<resources>
    <string name="app_name">DemoApp</string>
    <string name="partnerKey">cHsPa895adcc1632d4ea489b0006d4e72865f</string>
    <string name="facebook_app_id">376950950122226</string>
    <string name="internet_check">Oops, No internet found.Please check your connection or try again.</string>
    <string name="default_error">Unable to connect. Please try after sometime.</string>
    <string name="questions">Questions by :</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login_register">SIGN IN WITH TRUECALLER</string>
    <string name="privacy">By joining us,you agree to the <u>Terms and Conditions</u> and <u>Privcy Policy</u></string>
    <string name="terms_of_service">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string-array name="select_type_scolar">
        <item>Please Select User Type</item>
        <item>I am a Student</item>
        <item>I am a Teacher</item>
    </string-array>
    <string-array name="grade">
        <item>Please Select your class</item>
        <item>Class VI</item>
        <item>Class VII</item>
        <item>Class VIII</item>
        <item>Class IX</item>
        <item>Class X</item>
        <item>Class XI</item>
        <item>Class XII</item>
    </string-array>
    <string name="back_button">BACK</string>
    <string name="confirm_otp">CONFIRM OTP</string>
    <string name="not_receive_resend">Not Receive ? Resend</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="code_valid_for">(Code valid for)</string>
    <string name="title_activity_verify_with_phone_no">VerifyWithPhoneNoActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="intent_phone_number">intentphoneNumber</string>
    <string name="userOtp">userOtp</string>
    <string name="splash_screen_page">splash_screen_Page</string>
    <string name="event_verify_by_phone">login_page_verifyByPhone</string>
    <string name="event_mobile_no">Mobile_No</string>
    <string name="login_page_verify_by_fb">login_page_verifyByFb</string>
    <string name="login_page_userfbemail">login_page_userFbEmail</string>
    <string name="login_page_userfbname">login_Page_UserFbName</string>
    <string name="event_email_to_phoneno">phone_verify_page</string>
    <string name="event_verify_phone_no">verify_phone_no</string>
    <string name="event_splash_page_choose">splash_page_choose</string>
    <string name="event_teacher">Teacher</string>
    <string name="event_student">Student</string>
    <string name="event_otp_verify_mobileno">otp_verify_mobileno</string>
    <string name="event_otp_page">otp_page</string>
    <string name="event_student_dashboard_mobile_no">student_dashboard_mobile_no</string>
    <string name="event_student_dashboard_grade">student_dashboard_grade</string>
    <string name="event_student_dashboard_page">student_dashboard_page</string>
    <string name="event_teacher_dashboard_mobile_no">teacher_dashboard_mobile_no</string>
    <string name="event_teacher_dashboard_page">teacher_dashboard_page</string>
    <string name="event_student_logout">student_logout</string>
    <string name="event_teacher_logout">teacher_logout</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="change_mobile_no">Change Number</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="rs">₹</string>
    <string name="score_msg">Score 8/10 and get Rs.50 for each quiz</string>
    <string name="get_scholarship">Get Scholarship</string>
    <string name="quiz">Quiz</string>
    <string name="total_no_of_points">Total No. of Points:</string>
    <string name="retake_quiz_to_improve_your_points">Retake Quiz to improve your points</string>
    <string name="scholarship">Scholarship</string>
    <string name="wining_price">Wining price:</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="id_proof_front_side">ID Proof Front Side</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File chosen</string>
    <string name="id_proof_back_side">ID Proof Back Side</string>
    <string name="school_id_card">School ID Card</string>
    <string name="upload_profile_pic">Upload Your Photo</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="modify">Want To Modify Uploaded File</string>
    <string name="thank_you">Thank You \nfor taking the quiz!</string>
    <string name="new_quiz_will_be_available_next_month">New quiz will be available next month!</string>
    <string name="document_all_four_error_msg">Please select the all four document first</string>
    <string name="question_bank_powered_by_cambridge">Maths Questions powered by Cambridge</string>
    <string name="privacy_policy_auro">Privacy Policy</string>
    <string name="permission_error_msg">For taking the quiz camera permission is must.</string>
    <string name="complete_the_previous_quiz_to_unlock">Complete the previous quiz to unlock</string>
    <string name="you_win">You Win</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="upload_doc_text_msg">If you have face any issues please call us at +919667480783</string>
    <string name="score_and_get">Score 8/10 and get</string>
    <string name="for_each_quiz">for each quiz</string>
    <string name="english">English</string>
    <string name="sucessfully_uploaded">Sucessfully Uploaded</string>
    <string name="auro_scholar_demographics_details">Auro Scholar Demographics Details</string>
    <string name="gender">Gender</string>
    <string name="school_type">School Type</string>
    <string name="board">Board</string>
    <string name="language_medium">Language medium</string>
    <string-array name="genderlist">
        <item>Please Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="boardlist">
        <item>Please Select Board</item>
        <item>CBSE</item>
        <item>CESC</item>
        <item>ICSE</item>
        <item>Other</item>
    </string-array>
    <string-array name="schooltypelist">
        <item>Please Select School</item>
        <item>Private School</item>
        <item>Goverment School</item>
        <item>Other</item>
    </string-array>
    <string-array name="languagelist">
        <item>Please Select Language Medium</item>
        <item>Hindi</item>
        <item>English</item>
        <item>Other</item>
    </string-array>
    <string-array name="privateTutionList">
        <item>No</item>
        <item>YES</item>
    </string-array>
    <string-array name="privateTypeList">
        <item>Please Select Tution Type</item>
        <item>Group</item>
        <item>Personal</item>
        <item>Online</item>
    </string-array>
    <string name="bullted_list">
          \u25CF  Please read the all instructions carefully,
       \n \u25CF Question bank is powered by Cambridge.
        \n \u25CF Quiz contains the 10 questions.
        \n \u25CF Please read each and every question carefully.
        \n \u25CF Camera  will be only used for fraud control purpose.

    </string>
    <string name="document_uploaded">Document Uploaded</string>
    <string name="verification_is_in_process">Verification is in process</string>
    <string name="document_verified">Document Verified</string>
    <string name="declined">Declined</string>
    <string name="you_will_see_transfer">You will see transfer option after your document is verified</string>
    <string name="tranfer_money">Tranfer Money</string>
    <string name="invite_by">Send Invite to Friend</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="or">Or</string>
    <string name="share_with_other">Share With Other</string>
    <string name="invite">Invite</string>
    <string name="friends_leadeboard">Friends \nLeaderboard</string>
    <string name="score">Score</string>
    <string name="invite_your_friends">Invite Your Friends</string>
    <string name="your_friend_list">Your Friend List</string>
    <string name="challenge_your_friends">Challenge Your Friends</string>
    <string name="invite_them">Invite them</string>
    <string name="add_your_kyc">Add your kyc</string>
    <string name="please_put_your_face_inside_the_box">Please put your face inside the box</string>
    <string name="call_our_customercare">Please call our customer care number to get your scholarship cash</string>
    <string name="upload_document">Upload KYC Document</string>
    <string name="please_upload_the_document">Please Upload the Document</string>
    <string name="upload_verification">KYC Verification</string>
    <string name="transfer_scholarship">Transfer Scholarship</string>
    <string name="verification_In_Progress">Verification In Progress</string>
    <string name="scholarship_amount_approved">Scholarship Amount Approved</string>
    <string name="transactions">Transactions</string>
    <string name="priceAmmount"><u>₹50.00</u></string>
    <string name="approved">Approved</string>
    <string name="amount_rejected">Amount Rejected</string>
    <string name="priceAmmount_one">₹50.00</string>
    <string name="strike_amount"><strike>₹50.00</strike></string>
    <string name="kyc_verification">KYC Verification</string>
    <string name="information">Information</string>
    <string name="friends_ke_bina_kya_fun">Friends ke bina kya fun!</string>
    <string name="invite_friend_refrral">Hi! An exclusive invite just for you! Join me on AuroScholar App, challenge friends and get scholarship &amp; Certificates everyday! \n Click to accept my invitation &amp; Install App - ></string>
    <string name="challenge_msg">just challenged you in a quiz! Can you beat their score?</string>
    <string name="logout">Logout</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="text1_random">The more, the merrier</string>
    <string name="text2_random_chalange_your_friends">Challenge Your Friends To Take The Quiz!</string>
    <string name="text3_random_double_the">Double the fun. Double the Award.</string>
    <string name="text4_random_learning">Learning is fun, but learning together is even more rewarding!</string>
    <string name="text5_random_multiply">Multiply your rewards and divide your sorrows!</string>
    <string name="button1_random">Invite Your Friends</string>
    <string name="button2_random">Challenge Your Friends</string>
    <string name="log_click_on_whatapp_student">click_on_whatapp_student</string>
    <string name="log_quiz_home_fragment_student">Total_Subject_Page_Student</string>
    <string name="friends_leader_board">Friends Leader Board</string>
    <string name="payment_info">Payment Info</string>
    <string name="change_grade">Change Grade</string>
    <string name="change_language">Change Language</string>
    <string name="certificates">Certificates</string>
</resources>