<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.demo.application.home.presentation.viewmodel.LoginScreenViewModel"/>



    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7">

                    <ImageView
                        android:id="@+id/background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/splash_screen_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/logoauro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/auro_scholar_logo"
                        app:layout_constraintBottom_toBottomOf="@+id/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/background"
                        app:layout_constraintTop_toTopOf="@+id/background" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1.2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/SpinnerGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:background="@drawable/sppiner_boader"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_4sdp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/SpinnerGender"
                            app:layout_constraintEnd_toEndOf="@+id/SpinnerGender"
                            app:layout_constraintHorizontal_bias="0.97"
                            app:layout_constraintStart_toStartOf="@+id/SpinnerGender"
                            app:layout_constraintTop_toTopOf="@+id/SpinnerGender" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutClass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/SpinnerClass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:background="@drawable/sppiner_boader"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_4sdp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/SpinnerClass"
                            app:layout_constraintEnd_toEndOf="@+id/SpinnerClass"
                            app:layout_constraintHorizontal_bias="0.97"
                            app:layout_constraintStart_toStartOf="@+id/SpinnerClass"
                            app:layout_constraintTop_toTopOf="@+id/SpinnerClass" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.demo.application.core.util.uiwidget.RPEditText
                        android:id="@+id/edPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:visibility="gone"
                        android:background="@drawable/sppiner_boader"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorGrayText"
                        app:Font="Poppins-Regular.ttf" />

                    <com.demo.application.core.util.uiwidget.RPButton
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@color/color_medium_turque"
                        android:text="@string/login_register"
                        android:textColor="@color/white"
                        app:Font="Poppins-Regular.ttf" />

                </LinearLayout>



            </LinearLayout>
        <com.demo.application.core.util.uiwidget.RPTextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/privacy"
            android:textColor="@color/ash_grey"
            android:textSize="@dimen/_8sdp"
            app:Font="Poppins-ExtraLight.ttf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>